; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_add_adapter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_add_adapter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }

@i2c_adapter_idr = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@core_lock = common dso_local global i32 0, align 4
@__i2c_first_dynamic_bus_num = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2c_add_adapter(%struct.i2c_adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.i2c_adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %3, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %26, %1
  %7 = load i32, i32* @GFP_KERNEL, align 4
  %8 = call i64 @idr_pre_get(i32* @i2c_adapter_idr, i32 %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i32, i32* @ENOMEM, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %35

13:                                               ; preds = %6
  %14 = call i32 @mutex_lock(i32* @core_lock)
  %15 = load %struct.i2c_adapter*, %struct.i2c_adapter** %3, align 8
  %16 = load i32, i32* @__i2c_first_dynamic_bus_num, align 4
  %17 = call i32 @idr_get_new_above(i32* @i2c_adapter_idr, %struct.i2c_adapter* %15, i32 %16, i32* %4)
  store i32 %17, i32* %5, align 4
  %18 = call i32 @mutex_unlock(i32* @core_lock)
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %13
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* @EAGAIN, align 4
  %24 = sub nsw i32 0, %23
  %25 = icmp eq i32 %22, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  br label %6

27:                                               ; preds = %21
  %28 = load i32, i32* %5, align 4
  store i32 %28, i32* %2, align 4
  br label %35

29:                                               ; preds = %13
  %30 = load i32, i32* %4, align 4
  %31 = load %struct.i2c_adapter*, %struct.i2c_adapter** %3, align 8
  %32 = getelementptr inbounds %struct.i2c_adapter, %struct.i2c_adapter* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 4
  %33 = load %struct.i2c_adapter*, %struct.i2c_adapter** %3, align 8
  %34 = call i32 @i2c_register_adapter(%struct.i2c_adapter* %33)
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %29, %27, %10
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i64 @idr_pre_get(i32*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @idr_get_new_above(i32*, %struct.i2c_adapter*, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @i2c_register_adapter(%struct.i2c_adapter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
